test/fixtures/diagnostics/type-checker/negative/generic-optional-default-parameter-declaration/input.tysh
namespace Samples.TypeChecker.GenericOptionalDefaultParameterDeclarationInvalid

fun defaultGeneric<T>(value: T, fallback: T = null): T = value

fun defaultGenericArray<T>(values: T[] = null): T[] = values
